# EpicAsteroidGame

./: CMakeLists.txt  Makefile  blank-shell.html
src/headers/main/: asteroid.h  destroyer.h  globals.h  heart.h  projectile.h  star.h  text.h  timer.h
src/main/: asteroid.c  destroyer.c  heart.c  main.c  projectile.c  star.c  text.c  timer.c
